# memos-cli

./: .gitignore  LICENSE  PRD.md  README.md  pyproject.toml
memos_cli/: api.py  cli.py  creds.py  names.py  output.py
memos_cli/resources/: attachment.py  auth.py  config.py  memo.py  user.py
tests/: conftest.py  test_api.py  test_attachment.py  test_cli.py  test_creds.py  test_memo.py  test_names.py  test_output.py  test_user.py
