[project]
name = "memos-cli"
version = "0.1.0"
description = "Thin CLI for usememos self-hosted memo service"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "keyring>=24.0",
    "typer>=0.12",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
memos = "memos_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memos_cli"]
